[package]
name = "raxp_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["raxp_impl", "dom", "sax", "xslt", "stax"]

[workspace.dependencies]
tempfile = "3.3.0"
rstest = "0.16.0"
rstest_reuse = "0.4.0"