[package]
name = "raxp_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["org_w3c_dom", "raxp_impl", "dom", "xslt", "stax", "xerces", "xerces_shared", "org_sax", "util", "jdk_xml", "javax_xml", "workspace_tests"]

[workspace.dependencies]
tempfile = "3.3.0"
rstest = "0.16.0"
rstest_reuse = "0.4.0"
ambassador = "0.3.5"
enum-ordinalize = "3.1.12"
const_format = "0.2.30"
delegate = "0.8.0"