[package]
name = "javax_xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
org_sax = { path = "../org_sax" }
org_w3c_dom = { path = "../org_w3c_dom" }
