[package]
name = "xerces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { workspace = true }
enum-ordinalize = { workspace = true }
delegate = { workspace = true }
org_sax = { path = "../org_sax" }
jdk_xml = { path = "../jdk_xml" }